--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CS3270A9</string>
+    <string name="app_name">CS3270A9 Durfee</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="id">ID:</string>
     <string name="name_required">Name(Required):</string>
