--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
     <string name="DeleteInterfaceError">Must use delete dialog interface</string>
+    <string name="id">ID:</string>
 </resources>
