--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="cancel">Cancel</string>
     <string name="DeleteInterfaceError">Must use delete dialog interface</string>
     <string name="id">ID:</string>
+    <string name="nameNewCourse">Name:</string>
+    <string name="course_codeNewCourse">Course Code:</string>
+    <string name="start_atNewCourse">Start at:</string>
+    <string name="end_atNewCourse">End at:</string>
 </resources>
